<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".stories.main.MainFragment">

    <TextView
        android:id="@+id/name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_hint_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/name_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/tools_title_mock"
        app:layout_constraintStart_toEndOf="@+id/name_title"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/last_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/surname_hint_title"
        app:layout_constraintTop_toBottomOf="@+id/name_title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/last_name_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/tools_title_mock"
        app:layout_constraintStart_toEndOf="@+id/last_name_title"
        app:layout_constraintTop_toBottomOf="@+id/name_title"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/log_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_name_value"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:text="@string/exit"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/data_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_out"
        app:layout_constraintBottom_toTopOf="@+id/start"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/stop"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/start"/>
    <Button
        android:id="@+id/stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/start"
        app:layout_constraintEnd_toStartOf="@+id/reset"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/stop"/>
    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/stop"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/reset"/>

    <TextView
        android:id="@+id/sum_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sum_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/sum_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/tools_title_mock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sum_title"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>