<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/position_title"
        android:layout_width="0dp"
        android:layout_height="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text = "@string/position_title"/>

    <TextView
        android:id="@+id/position_value"
        android:layout_width="0dp"
        android:layout_height="20dp"
        app:layout_constraintStart_toEndOf="@+id/position_title"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        tools:text = "@string/position_title"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/position_title"
        app:layout_constraintBottom_toTopOf="@+id/time"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text = "@string/identifier_hint"/>

    <TextView
        android:id="@+id/transaction_id"
        android:layout_width="0dp"
        android:layout_height="20dp"
        app:layout_constraintStart_toEndOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title"
        app:layout_constraintBottom_toBottomOf="@+id/title"
        android:layout_marginStart="10dp"
        tools:text = "@string/exit"/>

    <TextView
        android:id="@+id/time"
        android:layout_width="0dp"
        android:layout_height="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/time_hint"/>

    <TextView
        android:id="@+id/transaction_time"
        android:layout_width="0dp"
        android:layout_height="20dp"
        app:layout_constraintStart_toEndOf="@+id/time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/time"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="10dp"
        tools:text = "@string/exit"/>
</androidx.constraintlayout.widget.ConstraintLayout>